# miklashevskaya_a_d

./: .gitignore  CMakeLists.txt  Rational.cpp
bin.unix64.Clang.dbg/: complex  rational
